spacing fix for mobile view

--- a/src/styles/partials/_global.scss
+++ b/src/styles/partials/_global.scss
@@ -10,7 +10,7 @@ body {
 	margin: 0;
 	background-color: $aqua;
     font-family: $font-fam;
-    padding-bottom: 50px;
+    padding-bottom: 90px;
 }
 
 .menu {
