--- a/src/styles/partials/_main.scss
+++ b/src/styles/partials/_main.scss
@@ -8,5 +8,6 @@ main {
     @include respond_to(medium) {
         grid-template-columns: 1fr;
         justify-items: center;
+        grid-gap: 0;
     }
 }
