--- a/src/styles/partials/_plant-form.scss
+++ b/src/styles/partials/_plant-form.scss
@@ -10,6 +10,10 @@
     position: relative;
     height: 605px;
 
+    @include respond_to(medium) {
+        margin-bottom: 40px;
+    }
+
     &__input-container {
         margin: 5px;
 
